--- a/src/config/config_global.json
+++ b/src/config/config_global.json
@@ -1,4 +1,5 @@
 {
     "token": "NTc2MDQ1MDA1MzIwMjI0Nzg3.XNQymw.KHwQ0lssTHgz1q4EjiLdinrTZIU",
-    "api_endpoint": "http://localhost:8888/bo-gestiontournoi/public/api"
+    "api_endpoint": "http://localhost:8888/bo-gestiontournoi/public/api",
+    "api_server": "http://localhost:8888"
 }
